--- a/app/views/admin/shared/_bootstrap_form_errors.html.erb
+++ b/app/views/admin/shared/_bootstrap_form_errors.html.erb
@@ -1,7 +1,7 @@
 <% if object.errors.messages[field.to_sym].present? %>
 	<span class="invalid-feedback d-block">
     <% object.errors.messages[field.to_sym].each do |error| %>
-    	<%= error %>
+    	<%= "#{field} #{error}"%>
   	<% end %>
   </span>
 <% end %>
