--- a/app/views/admin/shared/_pagination.html.erb
+++ b/app/views/admin/shared/_pagination.html.erb
@@ -9,7 +9,7 @@
 	  	<% @pages.times do |page| %>
 
 		  	<li class="page-item <%= "active" if @current_page == page + 1 %>">
-		  		<%= link_to page + 1, admin_albums_path(current_page: page + 1, per_page: 10, sort_direction: @sort_direction, sort_field: @sort_field), class: "page-link" %>
+		  		<%= link_to page + 1, admin_albums_path(current_page: page + 1, per_page: 10, sort_direction: @sort_direction, sort_field: @sort_field, q: params[:q]), class: "page-link" %>
 	  		</li>
 
 	    <% end %>
