--- a/app/views/admin/shared/_pagination.html.erb
+++ b/app/views/admin/shared/_pagination.html.erb
@@ -1,5 +1,3 @@
-
-
 <div class="pt-3">
 	<nav aria-label="admin table navigation">
 	  <ul class="pagination justify-content-center">
@@ -9,7 +7,7 @@
 	  	<% @pages.times do |page| %>
 
 		  	<li class="page-item <%= "active" if @current_page == page + 1 %>">
-		  		<%= link_to page + 1, admin_albums_path(current_page: page + 1, per_page: 10, sort_direction: @sort_direction, sort_field: @sort_field, q: params[:q]), class: "page-link" %>
+		  		<%= link_to page + 1, polymorphic_path([:admin, controller_name.classify.constantize], { current_page: page + 1, per_page: 10, sort_direction: @sort_direction, sort_field: @sort_field, q: params[:q] }), class: "page-link" %>
 	  		</li>
 
 	    <% end %>
