refactoring to dry up admin resources and improve sorting and searching within grids

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -19,10 +19,12 @@
   <body>
 
 
-    <div id="wrapper" class="toggled">
+    <div id="wrapper">
+
+        <%= render "admin/shared/bootstrap_navbar" %>
 
         <!-- Sidebar -->
-        <%= render "shared/sidebar" %>
+        <% render "shared/sidebar" %>
         <!-- /#sidebar-wrapper -->
 
         <!-- Page Content -->
