--- a/app/views/admin/shared/_pagination.html.erb
+++ b/app/views/admin/shared/_pagination.html.erb
@@ -2,17 +2,26 @@
 	<nav aria-label="admin table navigation">
 	  <ul class="pagination justify-content-center">
 
-	  	<li class="page-item <%= "disabled" if @current_page == 1 %>"><a class="page-link" href="#">Previous</a></li>
+	  	<% if @pages == 0 %>
 
-	  	<% @pages.times do |page| %>
+	  		<li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
+	  		<li class="page-item"><a class="page-link" href="#">1</a></li>
+	    	<li class="page-item disabled"><a class="page-link" href="#">Next</a></li>
 
-		  	<li class="page-item <%= "active" if @current_page == page + 1 %>">
-		  		<%= link_to page + 1, polymorphic_path([:admin, controller_name.classify.constantize], { current_page: page + 1, per_page: 10, sort_direction: @sort_direction, sort_field: @sort_field, q: params[:q] }), class: "page-link" %>
-	  		</li>
+	  	<% else %>
+	  		<li class="page-item <%= "disabled" if @current_page == 1 %>"><a class="page-link" href="#">Previous</a></li>
+
+		  	<% @pages.times do |page| %>
+
+			  	<li class="page-item <%= "active" if @current_page == page + 1 %>">
+			  		<%= link_to page + 1, polymorphic_path([:admin, controller_name.classify.constantize], { current_page: page + 1, per_page: 10, sort_direction: @sort_direction, sort_field: @sort_field, q: params[:q] }), class: "page-link" %>
+		  		</li>
+
+		    <% end %>
+
+	    	<li class="page-item <%= "disabled" if @current_page == @pages %>"><a class="page-link" href="#">Next</a></li>
 
 	    <% end %>
-
-	    <li class="page-item <%= "disabled" if @current_page == @pages %>"><a class="page-link" href="#">Next</a></li>
 
 	  </ul>
 	</nav>
